--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ __pycache__/
 # C extensions
 *.so
 
+# Hiddenfiles
+.*
+!.gitignore
+!.github/
+!.pre-commit-config.yaml
+
 # Distribution / packaging
 .Python
 build/
